--- a/example-data-analysis.ipynb
+++ b/example-data-analysis.ipynb
@@ -40,29 +40,88 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Define the URL\n",
-    "url = 'http://berkeleyearth.lbl.gov/auto/Regional/TAVG/Text/australia-TAVG-Trend.txt'\n",
-    "# Download the content of the URL\n",
-    "response = requests.get(url)\n",
-    "# Save it to a file\n",
-    "with open(\"data.txt\", 'w') as open_file:\n",
-    "    open_file.write(response.text)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Load the data using numpy (skip the header records which are marked with a `%`)."
+    "def build_url(country):\n",
+    "    \"Build a Berkeley Earth URL to download data\"\n",
+    "    url = f'http://berkeleyearth.lbl.gov/auto/Regional/TAVG/Text/{country.lower()}-TAVG-Trend.txt'\n",
+    "    return url"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'http://berkeleyearth.lbl.gov/auto/Regional/TAVG/Text/australia-TAVG-Trend.txt'"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Inspect our function\n",
+    "build_url(\"Australia\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Make a function to download and load the data for a given country."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "data = np.loadtxt(\"data.txt\", comments=\"%\")"
+    "def download_data(country, fname=None):\n",
+    "    \"Donwload the data for the given country, load it and optionally save to a file\"\n",
+    "    url = build_url(country)\n",
+    "    response = requests.get(url)\n",
+    "    if fname is not None:\n",
+    "        with open(fname, \"w\") as open_file:\n",
+    "            open_file.write(response.text)\n",
+    "    data = np.loadtxt(response.iter_lines(), comments=\"%\")\n",
+    "    return data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 1.852e+03,  7.000e+00, -1.840e-01, ...,        nan,        nan,\n",
+       "               nan],\n",
+       "       [ 1.852e+03,  8.000e+00, -5.900e-01, ...,        nan,        nan,\n",
+       "               nan],\n",
+       "       [ 1.852e+03,  9.000e+00, -4.500e-01, ...,        nan,        nan,\n",
+       "               nan],\n",
+       "       ...,\n",
+       "       [ 2.013e+03,  7.000e+00,  1.633e+00, ...,        nan,        nan,\n",
+       "               nan],\n",
+       "       [ 2.013e+03,  8.000e+00,  1.828e+00, ...,        nan,        nan,\n",
+       "               nan],\n",
+       "       [ 2.013e+03,  9.000e+00,        nan, ...,        nan,        nan,\n",
+       "               nan]])"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data = download_data(\"Australia\")\n",
+    "data"
    ]
   },
   {
@@ -74,12 +133,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "decimal_year = data[:, 0] + 1/12*(data[:, 1] - 1)\n",
-    "temperature_anomaly = data[:, 2]"
+    "def extract_monthly_anomaly(data):\n",
+    "    \"Extract the monthly anomaly from the data array and calculate a decimal year.\"\n",
+    "    decimal_year = data[:, 0] + 1/12*(data[:, 1] - 1)\n",
+    "    anomaly = data[:, 2]\n",
+    "    return decimal_year, anomaly"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "decimal_year, temperature_anomaly = extract_monthly_anomaly(data)"
    ]
   },
   {
@@ -91,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -100,7 +171,7 @@
        "(1852.5, 2013.6666666666667)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -134,18 +205,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "moving_avg = np.full(temperature_anomaly.size, np.nan)\n",
-    "for i in range(6, moving_avg.size - 6):\n",
-    "    moving_avg[i] = np.mean(temperature_anomaly[i - 6:i + 6])"
+    "def moving_average(data, window_size):\n",
+    "    \"Calculate a moving average over 1D data using the given window size\"\n",
+    "    average = np.full(data.size, np.nan)\n",
+    "    half_window = window_size // 2\n",
+    "    for i in range(half_window, data.size - half_window):\n",
+    "        average[i] = np.mean(data[i - half_window : i + half_window])\n",
+    "    return average"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "moving_avg = moving_average(temperature_anomaly, window_size=12)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -154,7 +238,7 @@
        "(1852.5, 2013.6666666666667)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     },
