--- a/example-data-analysis.ipynb
+++ b/example-data-analysis.ipynb
@@ -23,77 +23,20 @@
    "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt\n",
-    "import numpy as np\n",
-    "import requests"
+    "\n",
+    "from data_analysis import download_data, extract_monthly_anomaly, moving_average"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Use the [requests](http://docs.python-requests.org/) library to download the data file for Australia."
+    "Now use the imported functions."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def build_url(country):\n",
-    "    \"Build a Berkeley Earth URL to download data\"\n",
-    "    url = f'http://berkeleyearth.lbl.gov/auto/Regional/TAVG/Text/{country.lower()}-TAVG-Trend.txt'\n",
-    "    return url"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'http://berkeleyearth.lbl.gov/auto/Regional/TAVG/Text/australia-TAVG-Trend.txt'"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Inspect our function\n",
-    "build_url(\"Australia\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Make a function to download and load the data for a given country."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def download_data(country, fname=None):\n",
-    "    \"Donwload the data for the given country, load it and optionally save to a file\"\n",
-    "    url = build_url(country)\n",
-    "    response = requests.get(url)\n",
-    "    if fname is not None:\n",
-    "        with open(fname, \"w\") as open_file:\n",
-    "            open_file.write(response.text)\n",
-    "    data = np.loadtxt(response.iter_lines(), comments=\"%\")\n",
-    "    return data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +57,7 @@
        "               nan]])"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -133,20 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def extract_monthly_anomaly(data):\n",
-    "    \"Extract the monthly anomaly from the data array and calculate a decimal year.\"\n",
-    "    decimal_year = data[:, 0] + 1/12*(data[:, 1] - 1)\n",
-    "    anomaly = data[:, 2]\n",
-    "    return decimal_year, anomaly"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -171,7 +101,7 @@
        "(1852.5, 2013.6666666666667)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -207,22 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def moving_average(data, window_size):\n",
-    "    \"Calculate a moving average over 1D data using the given window size\"\n",
-    "    average = np.full(data.size, np.nan)\n",
-    "    half_window = window_size // 2\n",
-    "    for i in range(half_window, data.size - half_window):\n",
-    "        average[i] = np.mean(data[i - half_window : i + half_window])\n",
-    "    return average"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -231,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -240,7 +155,7 @@
        "(1852.5, 2013.6666666666667)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -267,22 +182,6 @@
     "plt.legend()\n",
     "plt.grid()\n",
     "plt.xlim(decimal_year.min(), decimal_year.max())"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "A small check that the function works as expected"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "assert np.all(moving_average(np.ones(10), 4)[2:-2] == 1)"
    ]
   },
   {
